--- a/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
@@ -176,11 +176,11 @@ isoladamente.
       </trans-unit>
       <trans-unit id="HelpMessage_37_LowPrioritySwitch">
         <source>  -lowPriority[:True|False]
-                     Causes MSBuild and it's sub-processes to run at low priority.
+                     Causes MSBuild to run at low priority.
                      (Short form: -low)
     </source>
         <target state="new">  -lowPriority[:True|False]
-                     Causes MSBuild and it's sub-processes to run at low priority.
+                     Causes MSBuild to run at low priority.
                      (Short form: -low)
     </target>
         <note>
