--- a/src/MSBuild/Resources/xlf/Strings.cs.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.cs.xlf
@@ -175,11 +175,17 @@ Copyright (C) Microsoft Corporation. Všechna práva vyhrazena.
       </trans-unit>
       <trans-unit id="HelpMessage_37_LowPrioritySwitch">
         <source>  -lowPriority[:True|False]
-                     Causes MSBuild to run at low priority.
+                     Causes MSBuild to run at low process priority.
+
+                     Specifying -lowPriority is the same as specifying
+                     -lowPriority:True.
                      (Short form: -low)
     </source>
         <target state="new">  -lowPriority[:True|False]
-                     Causes MSBuild to run at low priority.
+                     Causes MSBuild to run at low process priority.
+
+                     Specifying -lowPriority is the same as specifying
+                     -lowPriority:True.
                      (Short form: -low)
     </target>
         <note>
