--- a/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.pt-BR.xlf
@@ -176,11 +176,17 @@ isoladamente.
       </trans-unit>
       <trans-unit id="HelpMessage_37_LowPrioritySwitch">
         <source>  -lowPriority[:True|False]
-                     Causes MSBuild to run at low priority.
+                     Causes MSBuild to run at low process priority.
+
+                     Specifying -lowPriority is the same as specifying
+                     -lowPriority:True.
                      (Short form: -low)
     </source>
         <target state="new">  -lowPriority[:True|False]
-                     Causes MSBuild to run at low priority.
+                     Causes MSBuild to run at low process priority.
+
+                     Specifying -lowPriority is the same as specifying
+                     -lowPriority:True.
                      (Short form: -low)
     </target>
         <note>
