Build and run C# referencing C++/CLI project
- Remove unused code from previous commit

- Copy IJW to output

- Tests

- Have better error message when CLRSupport and TargetFramework mismatch

- Increase timeout

--- a/src/Tasks/Common/Resources/Strings.resx
+++ b/src/Tasks/Common/Resources/Strings.resx
@@ -560,4 +560,12 @@ The following are names of parameters or literal values and should not be transl
     <value>NETSDK1113: Failed to create apphost (attempt {0} out of {1}): {2}</value>
     <comment>{StrBegin="NETSDK1113: "}</comment>
   </data>
+  <data name="CannotFindIjwhost" xml:space="preserve">
+    <value>NETSDK1114: Unable to find a .NET Core IJW host. The .NET Core IJW host is only available on .NET Core 3.0 or higher when targeting Windows.</value>
+    <comment>{StrBegin="NETSDK1114: "}</comment>
+  </data>
+  <data name="NETFrameworkWithoutUsingNETSdkDefaults" xml:space="preserve">
+    <value>NETSDK1115: The current .NET SDK does not support .NET Framework without using .NET SDK Defaults. It is likely due to a mismatch between C++/CLI project CLRSupport property and TargetFramework.</value>
+    <comment>{StrBegin="NETSDK1115: "}</comment>
+  </data>
 </root>
