--- a/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.tr.xlf
+++ b/src/Microsoft.DotNet.Configurer/xlf/LocalizableStrings.tr.xlf
@@ -9,12 +9,15 @@
       </trans-unit>
       <trans-unit id="FirstTimeMessageMoreInformation">
         <source>----------------
+Installed an ASP.NET Core HTTPS development certificate.
+To trust the certificate run 'dotnet dev-certs https --trust' (Windows and macOS only).
+Learn about HTTPS: https://aka.ms/dotnet-https
+----------------
+Write your first app: https://aka.ms/dotnet-hello-world
+Find out what's new: https://aka.ms/dotnet-whats-new
 Explore documentation: https://aka.ms/dotnet-docs
 Report issues and find source on GitHub: https://github.com/dotnet/core
-Find out what's new: https://aka.ms/dotnet-whats-new
-Learn about the installed HTTPS developer cert: https://aka.ms/aspnet-core-https
-Use 'dotnet --help' to see available commands or visit: https://aka.ms/dotnet-cli-docs
-Write your first app: https://aka.ms/first-net-core-app
+Use 'dotnet --help' to see available commands or visit: https://aka.ms/dotnet-cli
 --------------------------------------------------------------------------------------</source>
         <target state="translated">----------------
 Belgeleri inceleyin: https://aka.ms/dotnet-docs
@@ -27,10 +30,10 @@ Kullanılabilen komutları görmek için 'dotnet --help' komutunu kullanın veya
         <note />
       </trans-unit>
       <trans-unit id="FirstTimeMessageWelcome">
-        <source>Welcome to .NET Core 3.0!
+        <source>Welcome to .NET Core 5.0!
 ---------------------
 SDK Version: {0}</source>
-        <target state="translated">.NET Core 3.0'a Hoş Geldiniz!
+        <target state="needs-review-translation">.NET Core 3.0'a Hoş Geldiniz!
 ---------------------
 SDK Sürümü: {0}</target>
         <note />
